# Predicting-Hospital-Inpatient-Costs-Using-Machine-Learning

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  Makefile  README.md  docker-compose.yml  hospital_cost_prediction.ipynb  pyproject.toml  requirements.txt  train.py
.streamlit/: config.toml
app/: streamlit_app.py
docs/: PROJECT_STRUCTURE.md  RESEARCH_PAPER.tex  SETUP_AND_DEPLOYMENT.md
src/: config.py
src/api/: main.py  schemas.py
src/data/: loader.py  preprocessor.py
src/models/: explainer.py  neural.py  traditional.py  trainer.py
