[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hospital-cost-predictor"
version = "2.0.0"
description = "Predicting Hospital Inpatient Costs Using Machine Learning"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
train = "train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
